codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 2083
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Codex to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  / for commands                                      shift + enter for newline                     "
"  @ for file paths                                    ctrl + ⌥ + v to paste images                  "
"  ctrl + b to toggle sub-agent background mode        esc again to edit previous message            "
"  ctrl + c to exit                                                                                  "
"  ctrl + t to view transcript                                                                       "
